--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </div>
             <ul class="sci">
             <li><a href="https://www.facebook.com/profile.php?id=100016818522222"><img src="images/facebook.png"></a></li> 
-            <li><a href="https://github.com/RamNathan691"><img src="/images/github.png"></a></li>
-            <li><a href="#"><img src="/images/linkedin.png"></a></li>
-            <li><a href="#"><img src="/images/twitter.png"></a></li>
+            <li><a href="https://github.com/RamNathan691"><img src="images/github.png"></a></li>
+            <li><a href="#"><img src="images/linkedin.png"></a></li>
+            <li><a href="#"><img src="images/twitter.png"></a></li>
             </ul>
           
     </section>
@@ -46,13 +46,13 @@
        
         <div class="box">
             <div class="content1">
-            <img src="/images/python.png">
+            <img src="images/python.png">
             <p>Certifications: Udemy</p>
             </div>
     </div>
     <div class="box">
         <div class="content1">
-            <img src="/images/c.png">
+            <img src="images/c.png">
             <p>C Basics<br>
             C Advanced</p>
         </div>
@@ -65,26 +65,26 @@
     </div>
     <div class="box">
         <div class="content1">
-            <img src="/images/django.png">
+            <img src="images/django.png">
             <p>Certifications: Udemy</p>
         </div>
     </div>
     <div class="box">
         <div class="content1">
-            <img src="/images/nodejs.jpg">
+            <img src="images/nodejs.jpg">
             <p>Certifications: Udemy</p>
         </div>
     </div>
     <div class="box">
         <div class="content1">
-            <img src="/images/html.png">
+            <img src="images/html.png">
             <p> HTML 5 & Basics</p>
         </div>
     </div>
   
     <div class="box">
         <div class="content1">
-            <img src="/images/css.png">
+            <img src="images/css.png">
             <p> Basics,Flex & Grids </p>
         </div>
     </div>
