--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     <div class="box">
         <div class="content1">
-            <img src="/images/javaScript.png">
+            <img src="images/javaScript.png">
             <p>JavaScript</p>
         </div>
     </div>
